[package]
name = "whitenoise"
version = "0.1.0"
authors = ["Evanesco-Labs"]
edition = "2018"

[dependencies]
libp2p = {version = "0.37.1",features = ["tcp-tokio"]}
tokio = { version = "1.4", features = ["fs", "sync", "time","macros","rt-multi-thread","process","net","io-util","io-std"] }
prost = "0.7"
log = "0.4"
futures = "0.3.1"
async-trait = "0.1"
void = "1"
uuid = { version = "0.8", features = ["v4"]}
smallvec = "1.6"
rusty-leveldb = "0.3.5"
bs58 = "0.4.0"
multihash = { version = "0.13", default-features = false, features = ["arb"] }
snow = "0.7.2"
bytes = "1"
eth-ecies = { git = "https://github.com/tritone11/rust-eth-ecies" , rev = "cb07b9f"}

[build-dependencies]
prost-build = "0.7"