[package]
name = "whitenoisers"
version = "0.1.0"
authors = ["Evanesco-Labs"]
edition = "2018"

[dependencies]
libp2p = { version = "0.37.1" }
async-std = { version = "1.6.5", features = ["attributes"] }
prost = "0.7"
log = "0.4"
futures = "0.3.1"
async-trait = "0.1"
void = "1"
uuid = { version = "0.8", features = ["v4"] }
smallvec = "1.6"
rusty-leveldb = "0.3.5"
bs58 = "0.4.0"
multihash = { version = "0.13", default-features = false, features = ["arb"] }
env_logger = "0.8.1"
futures-timer = "3"
snow = "0.7.2"
bytes = "1"
eth-ecies = { git = "https://github.com/tritone11/rust-eth-ecies", rev = "cb07b9f" }
rand = "0.7"
serde_json = "1.0"
serde = { version = "1.0.117", features = ["derive"] }
clap = "2.27.0"
ecies-ed25519 = { version = "0.5" }
sha2 = "0.9"
curve25519-dalek = "3"

[build-dependencies]
prost-build = "0.7"

[lib]

[features]
prod = []
local-test = []
default = ["prod"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[workspace]
members = [
    "whitenoise-client",
]